[project]
name = "utilotest"
version = "0.29.0"
description = ""
readme = {file = "README", content-type = "text/markdown"}
requires-python = ">=3.12"
authors = [
  {name = "Helmut Konrad Schewe", email = "helmutus@outlook.com"}
]

dependencies = [
    "utilo>=2.107.0,<3.0.0",
    "configos>=1.0.2,<2.0.0",
    #" resinf>=0.5.0<1.0.0",

    "pytest>=9.0.2,<10.0.0",
]

# Optional but recommended metadata
keywords = []
classifiers = [
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
]
license = "MIT"
license-files = ["LICENSE"]

[project.scripts]
collect_trace="utilotest.cli.tracer:main"

[project.optional-dependencies]
dev = [
    "selenium==4.41.0",

    "pytest_localserver==0.7.0",
    # power==2.24.0
]

[project.urls]
Homepage = "https://github.com/anaticulae/utilotest"
Repository = "https://github.com/anaticulae/utilotest"

[build-system]
requires = [
    "setuptools>=82.0.1",
    "wheel>=0.46.3"
]
build-backend = "setuptools.build_meta"


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG"
[tool.semantic_release.changelog]
mode = "init"
output_format = "md"
[tool.semantic_release.commit_parser_options]
# allways generate a new version
patch_tags = ["fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test", "deps"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "power",
    "utilotest",
    "utilotest.cli",
    "viewvisitor",
]
exclude = [
    "tests*",
]

[tool.setuptools.package-data]
viewvisitor = [
    "fuchs/*",
]

[tool.setuptools]
include-package-data = true
